# app2

./: main.py  pyproject.toml  requirements.txt
.github/workflows/: desktop-build.yml
src/: main.py
