[project]
name = "product_management_system"
version = "1.0.0"
description = "نظام إدارة المنتجات مع تكامل"
authors = [
  {name = "ACH-AOG", email = "achrafanwar2004@email.com"}
]
dependencies = [
  "flet",
  "python-telegram-bot==20.3",
  "pillow==10.0.1",
  "sqlite3"
]

[tool.flet]
org = "myprogram.com"
product = "نظام إدارة المنتجات"
company = "AOG Company"
copyright = "حقوق النشر محفوظة باسم ACH--AOG  (C) 2025"
build_number = 1

[tool.flet.app]
module = "main"
path = "."
exclude = ["product_images"]

[tool.flet.compile]
app = false
packages = false
cleanup = false

[tool.flet.splash]
color = "#4a6da7"
dark_color = "#183e63"
web = false
ios = false
android = false

[tool.flet.deep_linking]
scheme = "productmanager"
host = "localhost"

[tool.flet.ios]
team = "ACH44"
